[package]
name = "monsterserver"
version = "0.1.0"
authors = ["Gexon <alimgan@gmail.com>"]

[dependencies]
mio = "0.6.1"
tinyecs = { git = "https://github.com/not-fl3/tinyecs.git", branch = "WIP_macro_refactoring" }
slog = "1.3.0"
slog-stream = "1.2.0"
slog-stdlog = "1.1.0"
log = "0.3.6"
bincode = "0.6.0"
rustc-serialize = "0.3.21"
byteorder = "0.5.3"